# luminair-service

./: .env  .gitignore  .output.txt  AGENTS.md  CLAUDE.md  Cargo.toml  Dockerfile  GEMINI.md  LICENSE  associations-investigation.md  readme.MD  scratch_approach.rs
.agents/: AGENTS.md
.github/: copilot-instructions.md
.github/agents/: Reviewer.agent.md
.github/workflows/: docker-publish.yml  rust.yml
common/: Cargo.toml
common/src/: database.rs  lib.rs  test_utils.rs
common/src/documents/: attributes.rs  documents.rs  infrastructure.rs  mod.rs
common/src/domain/: attributes.rs  document_attributes.rs  documents.rs  entities.rs  mod.rs  persisted.rs  persistence.rs  relations.rs
common/src/domain/persistence/: mod.rs  tables.rs
common/src/infrastructure/: database.rs  documents.rs  mod.rs
common/src/infrastructure/adapters/: documents.rs
common/src/infratructure/: documents.rs  mod.rs
config/: default.yaml
config/schema/: brands.json  partner-categories.json  partners.json  points-of-sale.json
documentation/: README.md  api.md  architecture.md  database.md  different-investigations.md  domain-model.md  draft-and-publish-revision.md  draft-publish.md  implementation_plan.md  pass-vector-as-param-to-postgres.md  pr-release-and-deployment.md  query-parsing-architecture.md  release-and-docker.md  schemas.md  service-refactoring-plan.md
migration/: Cargo.toml
migration/src/: main.rs
migration/src/domain/: migration.rs  mod.rs  persistence.rs  tables.rs
migration/src/domain/tables/: generate.rs  mod.rs
migration/src/infrastructure/: migration.rs  mod.rs  persistence.rs  settings.rs  tables.rs
schema/: brands.json  partner-categories.json  partners.json  points-of-sale.json
service/: Cargo.toml
service/src/: main.rs
service/src/documents/: mod.rs  query.rs
service/src/domain/: mod.rs  query.rs
service/src/domain/application/: implementation.rs  mod.rs
service/src/domain/document/: content.rs  lifecycle.rs  mod.rs
service/src/domain/repository/: mod.rs  query.rs
service/src/domain/sql/: mod.rs  modify.rs  query.rs
service/src/infrastructure/: mod.rs  repository.rs  settings.rs
service/src/infrastructure/http/: api.rs  handlers.rs  mod.rs  routes.rs
service/src/infrastructure/http/documents/: dto.rs  mod.rs
service/src/infrastructure/http/handlers/: mod.rs
service/src/infrastructure/http/handlers/data/: dto.rs  mod.rs  request.rs  response.rs
service/src/infrastructure/http/handlers/documents/: dto.rs  mod.rs
service/src/infrastructure/persistence/: build.rs  builders.rs  columns.rs  infer.rs  mod.rs  parameters.rs  params.rs  query.rs  repository.rs  result.rs  schema.rs
service/src/persistence/: database.rs  documents.rs  mod.rs
src/common/: Cargo.toml
src/common/src/: lib.rs
src/common/src/domain/: entities.rs  mod.rs  persistence.rs  test_support.rs
src/common/src/infrastructure/: database.rs  documents.rs  mod.rs
src/common/src/infratructure/: database.rs  documents.rs
src/common/tests/: documents_integration.rs
src/migration/: Cargo.toml
src/migration/src/: lib.rs  main.rs
src/migration/src/application/: mod.rs
src/migration/src/domain/: dependency.rs  migration.rs  mod.rs  persistence.rs  schema.rs  tables.rs
src/migration/src/infrastructure/: mod.rs  persistence.rs
src/migration/tests/: migration_integration.rs
src/service/: Cargo.toml
src/service/src/: lib.rs  main.rs
src/service/src/application/: commands.rs  error.rs  implementation.rs  mod.rs  service.rs
src/service/src/domain/: mod.rs  query.rs  repository.rs
src/service/src/domain/application/: error.rs  implementation.rs  mod.rs
src/service/src/domain/document/: content.rs  error.rs  lifecycle.rs  mod.rs
src/service/src/infrastructure/: mod.rs  settings.rs
src/service/src/infrastructure/http/: api.rs  integration_tests.rs  mod.rs  querystring.rs  routes.rs
src/service/src/infrastructure/http/handlers/: mod.rs
src/service/src/infrastructure/http/handlers/content/: mod.rs  params.rs  query_params.rs  request.rs  response.rs
src/service/src/infrastructure/http/handlers/data/: mod.rs  request.rs  response.rs
src/service/src/infrastructure/http/handlers/documents/: dto.rs  mod.rs
src/service/src/infrastructure/http/handlers/schema/: dto.rs  mod.rs
src/service/src/infrastructure/persistence/: builders.rs  mod.rs  repository.rs  result.rs
src/service/src/infrastructure/persistence/builders/: find.rs  mod.rs  relations.rs  write.rs
src/service/src/infrastructure/persistence/mapping/: mod.rs  reader.rs  writer.rs
src/service/tests/: crud.rs  http_integration.rs  queries.rs  relations_lifecycle.rs
src/service/tests/common/: mod.rs
