[workspace]
members = [
    "src/common",
    "src/migration",
    "src/service"
]
resolver = "3" # Recommended for newer Cargo features

[workspace.dependencies]
anyhow = "1.0.102"
axum = { version = "0.8.9", features = ["macros"] }
chrono = { version = "0.4.44", features = ["serde"] }
config = { version = "0.15.23", features = ["yaml"] }
dotenvy = "0.15"
futures = "0.3.32"
itertools = "0.14.0"
nutype = { version = "0.7.0", features = ["regex", "serde"] }
regex = "1.12.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.150"
sqlx = { version = "0.9.0", features = ["tls-rustls", "any", "migrate", "postgres", "uuid", "chrono", "json", "rust_decimal"] }
tokio = { version = "1.52.3", features = ["full"] }
tracing = "0.1.44"
thiserror = "2.0.18"

[workspace.dependencies.sea-query]
version = "1.0.1"
features = ["backend-postgres", "sqlx-utils", "with-chrono", "with-json", "with-rust_decimal", "with-uuid", "postgres-array", "postgres-interval", "postgres-vector"]

[workspace.dependencies.uuid]
version = "1.23.2"
features = ["v4", "v7"]

[profile.release]
# Optimization level:
# 3 is the default for release, aiming for speed.
# "s" or "z" can be used to optimize for binary size instead.
opt-level = 3

# Enables Link-Time Optimization (LTO), which performs whole-program analysis
# and can lead to smaller, faster binaries. "fat" or true is the most aggressive.
lto = true

# Reduces the number of code generation units to 1 for more thorough optimization,
# at the cost of significantly longer compile times.
codegen-units = 1
