[package]
name = "migration"
version = "0.1.0"
edition = "2024"

[dependencies]
luminair_common= { path = "../common", package="common" }

anyhow = "1.0.100"
config = { version = "0.15.19", features = ["yaml"] }
dotenvy = "0.15"
futures = "0.3.31"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "any", "migrate", "postgres", "uuid"] }
tokio = { version = "1.48.0", features = ["full"] }