[package]
name = "service"
version = "0.1.0"
edition = "2024"

[dependencies]
luminair_common= { path = "../common", package="common" }

anyhow = "1.0.100"
axum = "0.8.7"
axum-prometheus = "0.9.0"
config = { version = "0.15.19", features = ["yaml"] }
chrono = { version = "0.4.42", features = ["serde"] }
dotenvy = "0.15"
futures = "0.3.31"
itertools = "0.14.0"
serde = { version = "1.0", features = ["derive"] }
sqlx = { version = "0.8.6", features = ["chrono"] }
tokio = { version = "1.48.0", features = ["full"] }
## tower = { version = "0.5.2", features = ["util", "timeout"] }
tower-http = { version = "0.6.6", features = ["add-extension", "trace"] }
tracing = "0.1.43"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

