[package]
name = "service"
version = "0.1.0"
edition = "2024"

[dependencies]
luminair_common= { path = "../common", package="common" }

anyhow = "1.0.100"
axum = { version = "0.8.8", features = ["macros"] }
axum-prometheus = "0.9.0"
config = { version = "0.15.19", features = ["yaml"] }
chrono = { version = "0.4.42", features = ["serde"] }
dotenvy = "0.15"
futures = "0.3.31"
itertools = "0.14.0"
regex = "1.12.2"
rust_decimal = { version = "1.40", features = ["serde-float", "serde-with-float"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.149"
serde-querystring = "=0.3.0"
sqlx = { version = "0.8.6", features = ["chrono", "json", "rust_decimal"] }
tokio = { version = "1.48.0", features = ["full"] }
## tower = { version = "0.5.2", features = ["util", "timeout"] }
tower-http = { version = "0.6.6", features = ["add-extension", "trace"] }
tracing = "0.1.43"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
# these dependencies for validation of new-types
nutype = { version = "0.6.2", features = ["regex","serde"] }
email_address = "0.2.9"
url = "2.5.8"

[dependencies.uuid]
version = "1.18.1"
features = [
    "v4",
    "v7",
]

[dependencies.sea-query]
version = "1.0.0-rc.31"
features = ["backend-postgres", "sqlx-utils", "with-chrono", "with-json", "with-rust_decimal", "with-uuid", "postgres-array", "postgres-interval", "postgres-vector"]

[dependencies.sea-query-sqlx]
version = "0.8.0-rc.14"
features = ["sqlx-postgres", "postgres-array", "postgres-vector", "with-chrono", "with-json", "with-rust_decimal", "with-uuid"]

[profile.release]
# Optimization level: 
# 3 is the default for release, aiming for speed. 
# "s" or "z" can be used to optimize for binary size instead.
opt-level = 3 

# Enables Link-Time Optimization (LTO), which performs whole-program analysis 
# and can lead to smaller, faster binaries. "fat" or true is the most aggressive.
lto = true

# Reduces the number of code generation units to 1 for more thorough optimization, 
# at the cost of significantly longer compile times.
codegen-units = 1 