[package]
name = "common"
version = "0.1.0"
edition = "2024"

[features]
## Exposes `InMemoryDocumentTypesRegistry` and other test utilities.
## Never compiled into production builds.
test-helpers = []

[dependencies]
anyhow = { workspace = true }
futures = { workspace = true }
nutype = { workspace = true }
regex = { workspace = true }
sea-query = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sqlx = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
