[package]
name = "migration"
version = "0.1.0"
edition = "2024"

[dependencies]
luminair_common = { path = "../common", package = "common" }
anyhow = { workspace = true }
config = { workspace = true }
dotenvy = { workspace = true }
futures = { workspace = true }
serde = { workspace = true }
sqlx = { workspace = true }
tokio = { workspace = true }
sea-query = { workspace = true }

[profile.release]
# Optimization level: 
# 3 is the default for release, aiming for speed. 
# "s" or "z" can be used to optimize for binary size instead.
opt-level = 3 

# Enables Link-Time Optimization (LTO), which performs whole-program analysis 
# and can lead to smaller, faster binaries. "fat" or true is the most aggressive.
lto = true

# Reduces the number of code generation units to 1 for more thorough optimization, 
# at the cost of significantly longer compile times.
codegen-units = 1 