[package]
name = "migration"
version = "0.1.0"
edition = "2024"

[dependencies]
luminair_common = { path = "../common", package = "common" }
anyhow = { workspace = true }
config = { workspace = true }
dotenvy = { workspace = true }
futures = { workspace = true }
serde = { workspace = true }
sqlx = { workspace = true }
tokio = { workspace = true }
sea-query = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
testcontainers-modules = { version = "0.15.0", features = ["postgres"] }

