[package]
name = "migration"
version = "0.1.0"
edition = "2024"

[dependencies]
luminair_common = { path = "../common", package = "common" }
anyhow = { workspace = true }
config = { workspace = true }
dotenvy = { workspace = true }
futures = { workspace = true }
sea-query = { workspace = true }
serde = { workspace = true }
sqlx = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }

[dev-dependencies]
luminair_common = { path = "../common", package = "common", features = ["test-helpers"] }
testcontainers-modules = { workspace = true }
uuid = { workspace = true }
