[package]
name = "service"
version = "0.1.0"
edition = "2024"

[dependencies]
luminair_common = { path = "../common", package = "common" }

anyhow = { workspace = true }
thiserror = { workspace = true }
axum = { workspace = true }
axum-prometheus = "0.10.0"
config = { workspace = true }
chrono = { workspace = true }
dotenvy = { workspace = true }
futures = { workspace = true }
itertools = { workspace = true }
regex = { workspace = true }
rust_decimal = { version = "1.40", features = ["serde-float", "serde-with-float"] }
serde = { workspace = true }
serde_json = { workspace = true }
serde-querystring = "=0.3.0"
sqlx = { workspace = true }
tokio = { workspace = true }
tower-http = { version = "0.6.6", features = ["add-extension", "trace"] }
tracing = { workspace = true }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
# these dependencies for validation of new-types
nutype = { workspace = true }
email_address = "0.2.9"
url = "2.5.8"
uuid = { workspace = true }
sea-query = { workspace = true }

[dependencies.sea-query-sqlx]
version = "0.8.0-rc.16"
features = ["sqlx-postgres", "postgres-array", "postgres-vector", "with-chrono", "with-json", "with-rust_decimal", "with-uuid"]

[profile.release]
# Optimization level:
# 3 is the default for release, aiming for speed.
# "s" or "z" can be used to optimize for binary size instead.
opt-level = 3

# Enables Link-Time Optimization (LTO), which performs whole-program analysis
# and can lead to smaller, faster binaries. "fat" or true is the most aggressive.
lto = true

# Reduces the number of code generation units to 1 for more thorough optimization,
# at the cost of significantly longer compile times.
codegen-units = 1
