[package]
name = "service"
version = "0.1.0"
edition = "2024"

[dependencies]
luminair_common = { path = "../common", package = "common" }

anyhow = { workspace = true }
thiserror = { workspace = true }
axum = { workspace = true }
config = { workspace = true }
chrono = { workspace = true }
dotenvy = { workspace = true }
futures = { workspace = true }
itertools = { workspace = true }
regex = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sqlx = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
nutype = { workspace = true }
uuid = { workspace = true }
sea-query = { workspace = true }

axum-prometheus = "0.10.0"
rust_decimal = { version = "1.40", features = ["serde-float", "serde-with-float"] }
tower-http = { version = "0.6.6", features = ["add-extension", "trace"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
email_address = "0.2.9"
url = "2.5.8"

[dependencies.sea-query-sqlx]
version = "0.9.1"
features = ["sqlx-postgres", "postgres-array", "postgres-vector", "with-chrono", "with-json", "with-rust_decimal", "with-uuid"]

[dev-dependencies]
testcontainers-modules = { version = "0.15.0", features = ["postgres"] }
tower = { version = "0.5.2", features = ["util"] }
uuid = { workspace = true }
migration = { path = "../migration" }


# Each container test boots a real Postgres container; serialise to prevent
# port exhaustion and connection resets when many containers race at startup.
[[test]]
name = "http_integration"
harness = true

