[package]
name = "service"
version = "0.1.0"
edition = "2024"

[dependencies]
luminair_common = { path = "../common", package = "common" }

anyhow = { workspace = true }
axum = { workspace = true }
axum-prometheus = { workspace = true }
chrono = { workspace = true }
config = { workspace = true }
dotenvy = { workspace = true }
email_address = { workspace = true }
futures = { workspace = true }
itertools = { workspace = true }
nutype = { workspace = true }
regex = { workspace = true }
rust_decimal = { workspace = true }
sea-query = { workspace = true }
sea-query-sqlx = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sqlx = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tower-http = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
url = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
migration = { path = "../migration" }
testcontainers-modules = { workspace = true }
tower = { workspace = true }
uuid = { workspace = true }




